fixed alignment issue in dashboard1

--- a/dashboard1.css
+++ b/dashboard1.css
@@ -864,8 +864,8 @@ body {
 }
 
 .profile-dropdown {
-  padding: 0px 35px;
-  padding-top: 35px;
+  padding: 0px 25px;
+  padding-top: 25px;
   position: absolute;
   background : white;
   top: 100%;
@@ -873,7 +873,7 @@ body {
   box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.28);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   display: none;
   transition: all 0.3s ease-in-out;
 }
@@ -896,7 +896,7 @@ body {
 .profile-logout-wrapper {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   
   
 }
